parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BOOLEAN
    CREATE
    CTE_CHAR
    E
    PI
    QUOTE

Grammar

Rule 0     S' -> PROGRAMA
Rule 1     PROGRAMA -> PROGRAM ID addfunction OPEN_BRACKET VARS add_count PROGRAMA_A MAIN quad_main BLOQUE CLOSE_BRACKET end_quad
Rule 2     end_quad -> <empty>
Rule 3     add_count -> <empty>
Rule 4     addfunction -> <empty>
Rule 5     quad_main -> <empty>
Rule 6     PROGRAMA_A -> MODULO PROGRAMA_A
Rule 7     PROGRAMA_A -> EMPTY
Rule 8     VARS -> VARS_KEYWORD OPEN_BRACKET VARS_A
Rule 9     VARS_A -> TIPO_P VARS_B
Rule 10    VARS_A -> TIPO_S VARS_B
Rule 11    VARS_B -> ID add_variable VARS_E VARS_C
Rule 12    add_variable -> <empty>
Rule 13    VARS_E -> OPEN_SQUARE_BRACKET CTE_INTEGER add_s1 CLOSE_SQUARE_BRACKET VARS_F
Rule 14    VARS_E -> EMPTY
Rule 15    add_s1 -> <empty>
Rule 16    VARS_F -> OPEN_SQUARE_BRACKET CTE_INTEGER add_s2 CLOSE_SQUARE_BRACKET
Rule 17    VARS_F -> EMPTY
Rule 18    add_s2 -> <empty>
Rule 19    VARS_C -> SEMICOLON VARS_D
Rule 20    VARS_C -> COMMA VARS_B
Rule 21    VARS_D -> CLOSE_BRACKET
Rule 22    VARS_D -> VARS_A
Rule 23    BLOQUE -> OPEN_BRACKET ESTATUTO_A CLOSE_BRACKET
Rule 24    ESTATUTO_A -> ESTATUTO ESTATUTO_A
Rule 25    ESTATUTO_A -> EMPTY
Rule 26    ESTATUTO -> ASIGNACION
Rule 27    ESTATUTO -> CONDICION
Rule 28    ESTATUTO -> NOMBRAR
Rule 29    ESTATUTO -> FOR
Rule 30    ESTATUTO -> WHILE
Rule 31    ESTATUTO -> PRINT
Rule 32    ESTATUTO -> PLOT
Rule 33    ESTATUTO -> LLAMADAMODULO
Rule 34    ESTATUTO -> INPUT
Rule 35    ESTATUTO -> COLOR
Rule 36    ESTATUTO -> RETURNOP
Rule 37    TIPO_P -> INT
Rule 38    TIPO_P -> FLOAT
Rule 39    TIPO_P -> BOOL
Rule 40    TIPO_P -> CHAR
Rule 41    TIPO_S -> TYPE_GRAPH
Rule 42    TIPO_S -> TYPE_PIECHART
Rule 43    TIPO_S -> TYPE_BARCHART
Rule 44    TIPO_S -> TYPE_HORBARCHART
Rule 45    TIPO_S -> TYPE_DONUTGRAPH
Rule 46    TIPO_S -> TYPE_NETWORK
Rule 47    TIPO_S -> TYPE_VENN
Rule 48    TIPO_S -> TYPE_RADARCHART
Rule 49    MODULO -> MODULE MODULO_A ID add_functionr OPEN_PARENTHESIS MODULO_C release_vars change_scope endproc
Rule 50    RETURNOP -> RETURN activate EXPRESIONESVARIAS return_quad SEMICOLON
Rule 51    activate -> <empty>
Rule 52    return_quad -> <empty>
Rule 53    release_vars -> <empty>
Rule 54    endproc -> <empty>
Rule 55    change_scope -> <empty>
Rule 56    add_functionr -> <empty>
Rule 57    MODULO_A -> VOID
Rule 58    MODULO_A -> TIPO_P
Rule 59    MODULO_B -> COMMA MODULO_C
Rule 60    MODULO_B -> EMPTY
Rule 61    MODULO_C -> TIPO_P ID add_variable_m MODULO_B MODULO_D
Rule 62    add_variable_m -> <empty>
Rule 63    MODULO_D -> CLOSE_PARENTHESIS param_table OPEN_BRACKET OPVARS add_count add_start BLOQUE CLOSE_BRACKET
Rule 64    MODULO_D -> EMPTY
Rule 65    OPVARS -> VARS
Rule 66    OPVARS -> EMPTY
Rule 67    add_start -> <empty>
Rule 68    param_table -> <empty>
Rule 69    LLAMADAMODULO -> ID era OPEN_PARENTHESIS LLAMADAMODULO_C gosub
Rule 70    gosub -> <empty>
Rule 71    era -> <empty>
Rule 72    LLAMADAMODULO_A -> COMMA incK LLAMADAMODULO_C
Rule 73    LLAMADAMODULO_A -> EMPTY
Rule 74    incK -> <empty>
Rule 75    LLAMADAMODULO_C -> EXP check_types LLAMADAMODULO_A LLAMADAMODULO_D
Rule 76    check_types -> <empty>
Rule 77    LLAMADAMODULO_D -> CLOSE_PARENTHESIS SEMICOLON
Rule 78    LLAMADAMODULO_D -> EMPTY
Rule 79    NOMBRAR -> ID POINT NOMBRAR_A OPEN_PARENTHESIS CTE_STRING CLOSE_PARENTHESIS SEMICOLON
Rule 80    NOMBRAR_A -> NAME
Rule 81    NOMBRAR_A -> NAMEX
Rule 82    NOMBRAR_A -> NAMEY
Rule 83    ASIGNACION -> ID addStackO ASIGNACION_A ASIGNACION_C SEMICOLON quad
Rule 84    quad -> <empty>
Rule 85    addStackO -> <empty>
Rule 86    ASIGNACION_A -> OPEN_SQUARE_BRACKET EXP CLOSE_SQUARE_BRACKET ver_arr ASIGNACION_B
Rule 87    ASIGNACION_A -> EMPTY
Rule 88    ver_arr -> <empty>
Rule 89    ASIGNACION_B -> OPEN_SQUARE_BRACKET EXP CLOSE_SQUARE_BRACKET ver_mat
Rule 90    ASIGNACION_B -> EMPTY
Rule 91    ver_mat -> <empty>
Rule 92    ASIGNACION_C -> EQUAL add_equal EXPRESIONESVARIAS
Rule 93    ASIGNACION_C -> EQUAL CTE_STRING
Rule 94    add_equal -> <empty>
Rule 95    CONDICION -> IF OPEN_PARENTHESIS EXPRESIONESVARIAS quad_not CLOSE_PARENTHESIS if_gotof BLOQUE CONDICION_A fill_end
Rule 96    if_gotof -> <empty>
Rule 97    fill_end -> <empty>
Rule 98    check_bool -> <empty>
Rule 99    CONDICION_A -> gotoElse ELSE BLOQUE
Rule 100   CONDICION_A -> EMPTY
Rule 101   gotoElse -> <empty>
Rule 102   FOR -> FOR_KEYWORD OPEN_PARENTHESIS ASIGNACION for_jump EXPRESIONESVARIAS for_gotof SEMICOLON ASIGNACION get_increment CLOSE_PARENTHESIS BLOQUE repeat_for
Rule 103   get_increment -> <empty>
Rule 104   for_jump -> <empty>
Rule 105   for_gotof -> <empty>
Rule 106   repeat_for -> <empty>
Rule 107   bool_for -> <empty>
Rule 108   WHILE -> WHILE_KEYWORD OPEN_PARENTHESIS while_jump EXPRESIONESVARIAS while_gotof CLOSE_PARENTHESIS BLOQUE goto_while
Rule 109   while_gotof -> <empty>
Rule 110   while_jump -> <empty>
Rule 111   goto_while -> <empty>
Rule 112   bool_while -> <empty>
Rule 113   EXP -> TERMINO pop_exp EXP_A
Rule 114   pop_exp -> <empty>
Rule 115   EXP_A -> PLUS append_operator EXP
Rule 116   EXP_A -> MINS append_operator EXP
Rule 117   EXP_A -> EMPTY
Rule 118   append_operator -> <empty>
Rule 119   TERMINO -> FACTOR pop_term TERMINO_A
Rule 120   pop_term -> <empty>
Rule 121   TERMINO_A -> TIMES add_operator TERMINO
Rule 122   TERMINO_A -> DIVIDE add_operator TERMINO
Rule 123   TERMINO_A -> EMPTY
Rule 124   add_operator -> <empty>
Rule 125   COLOR -> ID POINT COLOR_KEYWORD OPEN_PARENTHESIS COLOR_A CLOSE_PARENTHESIS SEMICOLON
Rule 126   COLOR_A -> COLOR_RED
Rule 127   COLOR_A -> COLOR_BLACK
Rule 128   COLOR_A -> COLOR_BLUE
Rule 129   COLOR_A -> COLOR_PURPLE
Rule 130   COLOR_A -> COLOR_GREEN
Rule 131   COLOR_A -> COLOR_ORANGE
Rule 132   FACTOR -> FACTOR_A
Rule 133   FACTOR_A -> OPEN_PARENTHESIS add_parenthesis FACTOR_B CLOSE_PARENTHESIS pop_parenthesis
Rule 134   FACTOR_A -> PLUS FACTOR_C
Rule 135   FACTOR_A -> MINS FACTOR_C
Rule 136   FACTOR_A -> FACTOR_C
Rule 137   FACTOR_A -> EMPTY
Rule 138   add_parenthesis -> <empty>
Rule 139   pop_parenthesis -> <empty>
Rule 140   FACTOR_B -> EXPRESIONESVARIAS
Rule 141   FACTOR_C -> VARS_CTE
Rule 142   VARS_CTE -> CTE_INTEGER append_cte_int
Rule 143   VARS_CTE -> CTE_FLOAT append_cte_float
Rule 144   VARS_CTE -> TRUE append_bool
Rule 145   VARS_CTE -> FALSE append_bool
Rule 146   VARS_CTE -> ID append_id
Rule 147   VARS_CTE -> ID append_id OPEN_SQUARE_BRACKET add_SB EXP CLOSE_SQUARE_BRACKET pop_SB ver_arr VARS_CTE_D
Rule 148   VARS_CTE -> ID era OPEN_PARENTHESIS add_parenthesis VARS_CTE_B pop_parenthesis gosub
Rule 149   append_id -> <empty>
Rule 150   append_cte_int -> <empty>
Rule 151   append_cte_float -> <empty>
Rule 152   append_bool -> <empty>
Rule 153   VARS_CTE_A -> OPEN_PARENTHESIS VARS_CTE_B
Rule 154   VARS_CTE_A -> OPEN_SQUARE_BRACKET add_SB EXP CLOSE_SQUARE_BRACKET pop_SB ver_arr VARS_CTE_D
Rule 155   VARS_CTE_A -> EMPTY
Rule 156   add_SB -> <empty>
Rule 157   pop_SB -> <empty>
Rule 158   VARS_CTE_B -> EXP check_types VARS_CTE_C CLOSE_PARENTHESIS
Rule 159   VARS_CTE_C -> COMMA incK VARS_CTE_B
Rule 160   VARS_CTE_C -> EMPTY
Rule 161   VARS_CTE_D -> OPEN_SQUARE_BRACKET add_SB EXP CLOSE_SQUARE_BRACKET pop_SB ver_mat
Rule 162   VARS_CTE_D -> EMPTY
Rule 163   INPUT -> INPUT_KEYWORD INPUTSYMBOL ID add_inputid INPUT_A SEMICOLON quad_input
Rule 164   add_inputid -> <empty>
Rule 165   quad_input -> <empty>
Rule 166   INPUT_A -> OPEN_SQUARE_BRACKET EXP CLOSE_SQUARE_BRACKET INPUT_B
Rule 167   INPUT_A -> EMPTY
Rule 168   INPUT_B -> OPEN_SQUARE_BRACKET EXP CLOSE_SQUARE_BRACKET
Rule 169   PLOT -> PGraph
Rule 170   PLOT -> PPie
Rule 171   PLOT -> PGBarras
Rule 172   PLOT -> PGBarrasHor
Rule 173   PLOT -> PDona
Rule 174   PLOT -> PRadar
Rule 175   PLOT -> PVenn
Rule 176   PLOT -> PLOT_B
Rule 177   PGraph -> ID POINT CREATEG OPEN_PARENTHESIS PLOT_C
Rule 178   PPie -> ID POINT CREATEPC OPEN_PARENTHESIS PLOT_E
Rule 179   PGBarras -> ID POINT CREATEGB OPEN_PARENTHESIS PLOT_E
Rule 180   PGBarrasHor -> ID POINT CREATEGBH OPEN_PARENTHESIS PLOT_E
Rule 181   PDona -> ID POINT CREATED OPEN_PARENTHESIS PLOT_E
Rule 182   PRadar -> ID POINT CREATER OPEN_PARENTHESIS PLOT_E
Rule 183   PVenn -> ID POINT CREATEV OPEN_PARENTHESIS CTE_INTEGER COMMA CTE_INTEGER COMMA CTE_INTEGER SEMICOLON CTE_STRING COMMA CTE_STRING CLOSE_PARENTHESIS SEMICOLON
Rule 184   PLOT_B -> ID POINT CREATEN OPEN_PARENTHESIS OPEN_SQUARE_BRACKET PLOT_M
Rule 185   PLOT_C -> PLOT_I CLOSE_PARENTHESIS SEMICOLON
Rule 186   PLOT_I -> CTE_INTEGER PLOT_D
Rule 187   PLOT_I -> CTE_FLOAT PLOT_D
Rule 188   PLOT_D -> COMMA PLOT_I
Rule 189   PLOT_D -> EMPTY
Rule 190   PLOT_E -> PLOT_F SEMICOLON PLOT_G
Rule 191   PLOT_F -> CTE_INTEGER PLOT_J
Rule 192   PLOT_F -> CTE_FLOAT PLOT_J
Rule 193   PLOT_J -> COMMA PLOT_F
Rule 194   PLOT_J -> EMPTY
Rule 195   PLOT_G -> PLOT_K CLOSE_PARENTHESIS SEMICOLON
Rule 196   PLOT_K -> CTE_STRING PLOT_H
Rule 197   PLOT_H -> COMMA PLOT_K
Rule 198   PLOT_H -> EMPTY
Rule 199   PLOT_M -> PLOT_N CLOSE_SQUARE_BRACKET SEMICOLON OPEN_SQUARE_BRACKET PLOT_P CLOSE_SQUARE_BRACKET CLOSE_PARENTHESIS SEMICOLON
Rule 200   PLOT_N -> CTE_STRING PLOT_O
Rule 201   PLOT_O -> COMMA PLOT_N
Rule 202   PLOT_O -> EMPTY
Rule 203   PLOT_P -> CTE_STRING PLOT_Q
Rule 204   PLOT_Q -> COMMA PLOT_P
Rule 205   PLOT_Q -> EMPTY
Rule 206   PRINT -> PRINT_KEYWORD OPEN_PARENTHESIS PRINT_A
Rule 207   PRINT_A -> PRINT_B CLOSE_PARENTHESIS print_quad SEMICOLON
Rule 208   PRINT_B -> CTE_STRING add_string PRINT_C
Rule 209   PRINT_B -> EXPRESIONESVARIAS add_temp PRINT_C
Rule 210   add_temp -> <empty>
Rule 211   add_string -> <empty>
Rule 212   print_quad -> <empty>
Rule 213   print_string -> <empty>
Rule 214   print_id -> <empty>
Rule 215   PRINT_C -> CONCATENATE EXPRESIONESVARIAS add_con PRINT_D
Rule 216   PRINT_C -> CONCATENATE CTE_STRING add_exp PRINT_D
Rule 217   PRINT_C -> EMPTY
Rule 218   add_exp -> <empty>
Rule 219   add_con -> <empty>
Rule 220   PRINT_D -> CONCATENATE add_sign PRINT_B
Rule 221   PRINT_D -> EMPTY
Rule 222   add_sign -> <empty>
Rule 223   EXPRESIONESVARIAS -> NOT EV_C
Rule 224   EXPRESIONESVARIAS -> EV_C
Rule 225   quad_not -> <empty>
Rule 226   EV_C -> EXP_RELOP quad_andor EV_B
Rule 227   quad_andor -> <empty>
Rule 228   EV_B -> AND add_ev EV_C
Rule 229   EV_B -> OR add_ev EV_C
Rule 230   EV_B -> EMPTY
Rule 231   add_ev -> <empty>
Rule 232   EXP_RELOP -> EXP EXP_RELOP_A
Rule 233   EXP_RELOP -> EMPTY
Rule 234   EXP_RELOP_A -> RELOP add_relop EXP quad_relop
Rule 235   EXP_RELOP_A -> EMPTY
Rule 236   quad_relop -> <empty>
Rule 237   add_relop -> <empty>
Rule 238   EMPTY -> <empty>

Terminals, with rules where they appear

AND                  : 228
BOOL                 : 39
BOOLEAN              : 
CHAR                 : 40
CLOSE_BRACKET        : 1 21 23 63
CLOSE_PARENTHESIS    : 63 77 79 95 102 108 125 133 158 183 185 195 199 207
CLOSE_SQUARE_BRACKET : 13 16 86 89 147 154 161 166 168 199 199
COLOR_BLACK          : 127
COLOR_BLUE           : 128
COLOR_GREEN          : 130
COLOR_KEYWORD        : 125
COLOR_ORANGE         : 131
COLOR_PURPLE         : 129
COLOR_RED            : 126
COMMA                : 20 59 72 159 183 183 183 188 193 197 201 204
CONCATENATE          : 215 216 220
CREATE               : 
CREATED              : 181
CREATEG              : 177
CREATEGB             : 179
CREATEGBH            : 180
CREATEN              : 184
CREATEPC             : 178
CREATER              : 182
CREATEV              : 183
CTE_CHAR             : 
CTE_FLOAT            : 143 187 192
CTE_INTEGER          : 13 16 142 183 183 183 186 191
CTE_STRING           : 79 93 183 183 196 200 203 208 216
DIVIDE               : 122
E                    : 
ELSE                 : 99
EQUAL                : 92 93
FALSE                : 145
FLOAT                : 38
FOR_KEYWORD          : 102
ID                   : 1 11 49 61 69 79 83 125 146 147 148 163 177 178 179 180 181 182 183 184
IF                   : 95
INPUTSYMBOL          : 163
INPUT_KEYWORD        : 163
INT                  : 37
MAIN                 : 1
MINS                 : 116 135
MODULE               : 49
NAME                 : 80
NAMEX                : 81
NAMEY                : 82
NOT                  : 223
OPEN_BRACKET         : 1 8 23 63
OPEN_PARENTHESIS     : 49 69 79 95 102 108 125 133 148 153 177 178 179 180 181 182 183 184 206
OPEN_SQUARE_BRACKET  : 13 16 86 89 147 154 161 166 168 184 199
OR                   : 229
PI                   : 
PLUS                 : 115 134
POINT                : 79 125 177 178 179 180 181 182 183 184
PRINT_KEYWORD        : 206
PROGRAM              : 1
QUOTE                : 
RELOP                : 234
RETURN               : 50
SEMICOLON            : 19 50 77 79 83 102 125 163 183 183 185 190 195 199 199 207
TIMES                : 121
TRUE                 : 144
TYPE_BARCHART        : 43
TYPE_DONUTGRAPH      : 45
TYPE_GRAPH           : 41
TYPE_HORBARCHART     : 44
TYPE_NETWORK         : 46
TYPE_PIECHART        : 42
TYPE_RADARCHART      : 48
TYPE_VENN            : 47
VARS_KEYWORD         : 8
VOID                 : 57
WHILE_KEYWORD        : 108
error                : 

Nonterminals, with rules where they appear

ASIGNACION           : 26 102 102
ASIGNACION_A         : 83
ASIGNACION_B         : 86
ASIGNACION_C         : 83
BLOQUE               : 1 63 95 99 102 108
COLOR                : 35
COLOR_A              : 125
CONDICION            : 27
CONDICION_A          : 95
EMPTY                : 7 14 17 25 60 64 66 73 78 87 90 100 117 123 137 155 160 162 167 189 194 198 202 205 217 221 230 233 235
ESTATUTO             : 24
ESTATUTO_A           : 23 24
EV_B                 : 226
EV_C                 : 223 224 228 229
EXP                  : 75 86 89 115 116 147 154 158 161 166 168 232 234
EXPRESIONESVARIAS    : 50 92 95 102 108 140 209 215
EXP_A                : 113
EXP_RELOP            : 226
EXP_RELOP_A          : 232
FACTOR               : 119
FACTOR_A             : 132
FACTOR_B             : 133
FACTOR_C             : 134 135 136
FOR                  : 29
INPUT                : 34
INPUT_A              : 163
INPUT_B              : 166
LLAMADAMODULO        : 33
LLAMADAMODULO_A      : 75
LLAMADAMODULO_C      : 69 72
LLAMADAMODULO_D      : 75
MODULO               : 6
MODULO_A             : 49
MODULO_B             : 61
MODULO_C             : 49 59
MODULO_D             : 61
NOMBRAR              : 28
NOMBRAR_A            : 79
OPVARS               : 63
PDona                : 173
PGBarras             : 171
PGBarrasHor          : 172
PGraph               : 169
PLOT                 : 32
PLOT_B               : 176
PLOT_C               : 177
PLOT_D               : 186 187
PLOT_E               : 178 179 180 181 182
PLOT_F               : 190 193
PLOT_G               : 190
PLOT_H               : 196
PLOT_I               : 185 188
PLOT_J               : 191 192
PLOT_K               : 195 197
PLOT_M               : 184
PLOT_N               : 199 201
PLOT_O               : 200
PLOT_P               : 199 204
PLOT_Q               : 203
PPie                 : 170
PRINT                : 31
PRINT_A              : 206
PRINT_B              : 207 220
PRINT_C              : 208 209
PRINT_D              : 215 216
PROGRAMA             : 0
PROGRAMA_A           : 1 6
PRadar               : 174
PVenn                : 175
RETURNOP             : 36
TERMINO              : 113 121 122
TERMINO_A            : 119
TIPO_P               : 9 58 61
TIPO_S               : 10
VARS                 : 1 65
VARS_A               : 8 22
VARS_B               : 9 10 20
VARS_C               : 11
VARS_CTE             : 141
VARS_CTE_A           : 
VARS_CTE_B           : 148 153 159
VARS_CTE_C           : 158
VARS_CTE_D           : 147 154
VARS_D               : 19
VARS_E               : 11
VARS_F               : 13
WHILE                : 30
activate             : 50
addStackO            : 83
add_SB               : 147 154 161
add_con              : 215
add_count            : 1 63
add_equal            : 92
add_ev               : 228 229
add_exp              : 216
add_functionr        : 49
add_inputid          : 163
add_operator         : 121 122
add_parenthesis      : 133 148
add_relop            : 234
add_s1               : 13
add_s2               : 16
add_sign             : 220
add_start            : 63
add_string           : 208
add_temp             : 209
add_variable         : 11
add_variable_m       : 61
addfunction          : 1
append_bool          : 144 145
append_cte_float     : 143
append_cte_int       : 142
append_id            : 146 147
append_operator      : 115 116
bool_for             : 
bool_while           : 
change_scope         : 49
check_bool           : 
check_types          : 75 158
end_quad             : 1
endproc              : 49
era                  : 69 148
fill_end             : 95
for_gotof            : 102
for_jump             : 102
get_increment        : 102
gosub                : 69 148
gotoElse             : 99
goto_while           : 108
if_gotof             : 95
incK                 : 72 159
param_table          : 63
pop_SB               : 147 154 161
pop_exp              : 113
pop_parenthesis      : 133 148
pop_term             : 119
print_id             : 
print_quad           : 207
print_string         : 
quad                 : 83
quad_andor           : 226
quad_input           : 163
quad_main            : 1
quad_not             : 95
quad_relop           : 234
release_vars         : 49
repeat_for           : 102
return_quad          : 50
ver_arr              : 86 147 154
ver_mat              : 89 161
while_gotof          : 108
while_jump           : 108

Parsing method: LALR

state 0

    (0) S' -> . PROGRAMA
    (1) PROGRAMA -> . PROGRAM ID addfunction OPEN_BRACKET VARS add_count PROGRAMA_A MAIN quad_main BLOQUE CLOSE_BRACKET end_quad

    PROGRAM         shift and go to state 2

    PROGRAMA                       shift and go to state 1

state 1

    (0) S' -> PROGRAMA .



state 2

    (1) PROGRAMA -> PROGRAM . ID addfunction OPEN_BRACKET VARS add_count PROGRAMA_A MAIN quad_main BLOQUE CLOSE_BRACKET end_quad

    ID              shift and go to state 3


state 3

    (1) PROGRAMA -> PROGRAM ID . addfunction OPEN_BRACKET VARS add_count PROGRAMA_A MAIN quad_main BLOQUE CLOSE_BRACKET end_quad
    (4) addfunction -> .

    OPEN_BRACKET    reduce using rule 4 (addfunction -> .)

    addfunction                    shift and go to state 4

state 4

    (1) PROGRAMA -> PROGRAM ID addfunction . OPEN_BRACKET VARS add_count PROGRAMA_A MAIN quad_main BLOQUE CLOSE_BRACKET end_quad

    OPEN_BRACKET    shift and go to state 5


state 5

    (1) PROGRAMA -> PROGRAM ID addfunction OPEN_BRACKET . VARS add_count PROGRAMA_A MAIN quad_main BLOQUE CLOSE_BRACKET end_quad
    (8) VARS -> . VARS_KEYWORD OPEN_BRACKET VARS_A

    VARS_KEYWORD    shift and go to state 7

    VARS                           shift and go to state 6

state 6

    (1) PROGRAMA -> PROGRAM ID addfunction OPEN_BRACKET VARS . add_count PROGRAMA_A MAIN quad_main BLOQUE CLOSE_BRACKET end_quad
    (3) add_count -> .

    MODULE          reduce using rule 3 (add_count -> .)
    MAIN            reduce using rule 3 (add_count -> .)

    add_count                      shift and go to state 8

state 7

    (8) VARS -> VARS_KEYWORD . OPEN_BRACKET VARS_A

    OPEN_BRACKET    shift and go to state 9


state 8

    (1) PROGRAMA -> PROGRAM ID addfunction OPEN_BRACKET VARS add_count . PROGRAMA_A MAIN quad_main BLOQUE CLOSE_BRACKET end_quad
    (6) PROGRAMA_A -> . MODULO PROGRAMA_A
    (7) PROGRAMA_A -> . EMPTY
    (49) MODULO -> . MODULE MODULO_A ID add_functionr OPEN_PARENTHESIS MODULO_C release_vars change_scope endproc
    (238) EMPTY -> .

    MODULE          shift and go to state 13
    MAIN            reduce using rule 238 (EMPTY -> .)

    PROGRAMA_A                     shift and go to state 10
    MODULO                         shift and go to state 11
    EMPTY                          shift and go to state 12

state 9

    (8) VARS -> VARS_KEYWORD OPEN_BRACKET . VARS_A
    (9) VARS_A -> . TIPO_P VARS_B
    (10) VARS_A -> . TIPO_S VARS_B
    (37) TIPO_P -> . INT
    (38) TIPO_P -> . FLOAT
    (39) TIPO_P -> . BOOL
    (40) TIPO_P -> . CHAR
    (41) TIPO_S -> . TYPE_GRAPH
    (42) TIPO_S -> . TYPE_PIECHART
    (43) TIPO_S -> . TYPE_BARCHART
    (44) TIPO_S -> . TYPE_HORBARCHART
    (45) TIPO_S -> . TYPE_DONUTGRAPH
    (46) TIPO_S -> . TYPE_NETWORK
    (47) TIPO_S -> . TYPE_VENN
    (48) TIPO_S -> . TYPE_RADARCHART

    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    BOOL            shift and go to state 19
    CHAR            shift and go to state 20
    TYPE_GRAPH      shift and go to state 21
    TYPE_PIECHART   shift and go to state 22
    TYPE_BARCHART   shift and go to state 23
    TYPE_HORBARCHART shift and go to state 24
    TYPE_DONUTGRAPH shift and go to state 25
    TYPE_NETWORK    shift and go to state 26
    TYPE_VENN       shift and go to state 27
    TYPE_RADARCHART shift and go to state 28

    VARS_A                         shift and go to state 14
    TIPO_P                         shift and go to state 15
    TIPO_S                         shift and go to state 16

state 10

    (1) PROGRAMA -> PROGRAM ID addfunction OPEN_BRACKET VARS add_count PROGRAMA_A . MAIN quad_main BLOQUE CLOSE_BRACKET end_quad

    MAIN            shift and go to state 29


state 11

    (6) PROGRAMA_A -> MODULO . PROGRAMA_A
    (6) PROGRAMA_A -> . MODULO PROGRAMA_A
    (7) PROGRAMA_A -> . EMPTY
    (49) MODULO -> . MODULE MODULO_A ID add_functionr OPEN_PARENTHESIS MODULO_C release_vars change_scope endproc
    (238) EMPTY -> .

    MODULE          shift and go to state 13
    MAIN            reduce using rule 238 (EMPTY -> .)

    MODULO                         shift and go to state 11
    PROGRAMA_A                     shift and go to state 30
    EMPTY                          shift and go to state 12

state 12

    (7) PROGRAMA_A -> EMPTY .

    MAIN            reduce using rule 7 (PROGRAMA_A -> EMPTY .)


state 13

    (49) MODULO -> MODULE . MODULO_A ID add_functionr OPEN_PARENTHESIS MODULO_C release_vars change_scope endproc
    (57) MODULO_A -> . VOID
    (58) MODULO_A -> . TIPO_P
    (37) TIPO_P -> . INT
    (38) TIPO_P -> . FLOAT
    (39) TIPO_P -> . BOOL
    (40) TIPO_P -> . CHAR

    VOID            shift and go to state 32
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    BOOL            shift and go to state 19
    CHAR            shift and go to state 20

    MODULO_A                       shift and go to state 31
    TIPO_P                         shift and go to state 33

state 14

    (8) VARS -> VARS_KEYWORD OPEN_BRACKET VARS_A .

    MODULE          reduce using rule 8 (VARS -> VARS_KEYWORD OPEN_BRACKET VARS_A .)
    MAIN            reduce using rule 8 (VARS -> VARS_KEYWORD OPEN_BRACKET VARS_A .)
    OPEN_BRACKET    reduce using rule 8 (VARS -> VARS_KEYWORD OPEN_BRACKET VARS_A .)


state 15

    (9) VARS_A -> TIPO_P . VARS_B
    (11) VARS_B -> . ID add_variable VARS_E VARS_C

    ID              shift and go to state 35

    VARS_B                         shift and go to state 34

state 16

    (10) VARS_A -> TIPO_S . VARS_B
    (11) VARS_B -> . ID add_variable VARS_E VARS_C

    ID              shift and go to state 35

    VARS_B                         shift and go to state 36

state 17

    (37) TIPO_P -> INT .

    ID              reduce using rule 37 (TIPO_P -> INT .)


state 18

    (38) TIPO_P -> FLOAT .

    ID              reduce using rule 38 (TIPO_P -> FLOAT .)


state 19

    (39) TIPO_P -> BOOL .

    ID              reduce using rule 39 (TIPO_P -> BOOL .)


state 20

    (40) TIPO_P -> CHAR .

    ID              reduce using rule 40 (TIPO_P -> CHAR .)


state 21

    (41) TIPO_S -> TYPE_GRAPH .

    ID              reduce using rule 41 (TIPO_S -> TYPE_GRAPH .)


state 22

    (42) TIPO_S -> TYPE_PIECHART .

    ID              reduce using rule 42 (TIPO_S -> TYPE_PIECHART .)


state 23

    (43) TIPO_S -> TYPE_BARCHART .

    ID              reduce using rule 43 (TIPO_S -> TYPE_BARCHART .)


state 24

    (44) TIPO_S -> TYPE_HORBARCHART .

    ID              reduce using rule 44 (TIPO_S -> TYPE_HORBARCHART .)


state 25

    (45) TIPO_S -> TYPE_DONUTGRAPH .

    ID              reduce using rule 45 (TIPO_S -> TYPE_DONUTGRAPH .)


state 26

    (46) TIPO_S -> TYPE_NETWORK .

    ID              reduce using rule 46 (TIPO_S -> TYPE_NETWORK .)


state 27

    (47) TIPO_S -> TYPE_VENN .

    ID              reduce using rule 47 (TIPO_S -> TYPE_VENN .)


state 28

    (48) TIPO_S -> TYPE_RADARCHART .

    ID              reduce using rule 48 (TIPO_S -> TYPE_RADARCHART .)


state 29

    (1) PROGRAMA -> PROGRAM ID addfunction OPEN_BRACKET VARS add_count PROGRAMA_A MAIN . quad_main BLOQUE CLOSE_BRACKET end_quad
    (5) quad_main -> .

    OPEN_BRACKET    reduce using rule 5 (quad_main -> .)

    quad_main                      shift and go to state 37

state 30

    (6) PROGRAMA_A -> MODULO PROGRAMA_A .

    MAIN            reduce using rule 6 (PROGRAMA_A -> MODULO PROGRAMA_A .)


state 31

    (49) MODULO -> MODULE MODULO_A . ID add_functionr OPEN_PARENTHESIS MODULO_C release_vars change_scope endproc

    ID              shift and go to state 38


state 32

    (57) MODULO_A -> VOID .

    ID              reduce using rule 57 (MODULO_A -> VOID .)


state 33

    (58) MODULO_A -> TIPO_P .

    ID              reduce using rule 58 (MODULO_A -> TIPO_P .)


state 34

    (9) VARS_A -> TIPO_P VARS_B .

    MODULE          reduce using rule 9 (VARS_A -> TIPO_P VARS_B .)
    MAIN            reduce using rule 9 (VARS_A -> TIPO_P VARS_B .)
    OPEN_BRACKET    reduce using rule 9 (VARS_A -> TIPO_P VARS_B .)


state 35

    (11) VARS_B -> ID . add_variable VARS_E VARS_C
    (12) add_variable -> .

    OPEN_SQUARE_BRACKET reduce using rule 12 (add_variable -> .)
    SEMICOLON       reduce using rule 12 (add_variable -> .)
    COMMA           reduce using rule 12 (add_variable -> .)

    add_variable                   shift and go to state 39

state 36

    (10) VARS_A -> TIPO_S VARS_B .

    MODULE          reduce using rule 10 (VARS_A -> TIPO_S VARS_B .)
    MAIN            reduce using rule 10 (VARS_A -> TIPO_S VARS_B .)
    OPEN_BRACKET    reduce using rule 10 (VARS_A -> TIPO_S VARS_B .)


state 37

    (1) PROGRAMA -> PROGRAM ID addfunction OPEN_BRACKET VARS add_count PROGRAMA_A MAIN quad_main . BLOQUE CLOSE_BRACKET end_quad
    (23) BLOQUE -> . OPEN_BRACKET ESTATUTO_A CLOSE_BRACKET

    OPEN_BRACKET    shift and go to state 40

    BLOQUE                         shift and go to state 41

state 38

    (49) MODULO -> MODULE MODULO_A ID . add_functionr OPEN_PARENTHESIS MODULO_C release_vars change_scope endproc
    (56) add_functionr -> .

    OPEN_PARENTHESIS reduce using rule 56 (add_functionr -> .)

    add_functionr                  shift and go to state 42

state 39
